	the new corresponding textblock functions.

2012-01-23  Cedric Bail

	* Fix overridding group in edje_cc by fixing with the right index.

2012-01-24  Cedric Bail

	* Filter should only be valid once all program affecting there part are done.

2012-01-25  Cedric Bail

	* Only store the image used by active group.

2012-01-26  Cedric Bail

	* Add min: SOURCE, max: SOURCE.

2012-02-03  Jihoon Kim

	* Entry: Fix to work edje_object_part_text_input_panel_enabled_set/get well
             even though ecore_imf doesn't exist or immodule isn't used.

2012-02-07  WooHyun Jung

        * Added edje_object_markup_filter_callback_{add,del,del_full}.
        These let you append(delete) markup filter functions for filtering
        inserted text.

2012-02-08  Cedric Bail

	* Fix bug when using EDJE_CALC_CACHE and using relative to x and y
	on separate part.
	* Fix bug with filter preventing any action to be triggered.

2012-02-10  Cedric Bail

	* Prevent propagation of signal, when there is a matching target with edje GROUP.

2012-02-13  Jihoon Kim

	* add edje_object_part_text_input_panel_show/hide.
      These APIs can be used in input panel manual control mode.
	* add edje_object_part_text_imf_context_reset that will use
      for reseting the input method context.

2012-02-14  Jihoon Kim

	* add edje_object_part_text_prediction_allow_set/get.
      These APIs can be used to set whether prediction feature is allowed or not.

2012-02-14  Cedric Bail

	* add a way to disable signal broadcasting introduced in edje 1.1.

2012-02-15  Jihoon Kim

	* add edje_object_part_text_input_panel_language_set/get
          edje_object_part_text_input_panel_imdata_set/get
          edje_object_part_text_input_panel_return_key_type_set/get
          edje_object_part_text_input_panel_return_key_disabled_set/get

2012-02-20  WooHyun Jung

        * Change API names from edje_object_markup_filter_callback_{add,del,del_full}.
        to edje_object_text_markup_filter_callback_{add,del,del_full}.