@@ -360,3 +360,7 @@
 
         * Change API names from edje_object_markup_filter_callback_{add,del,del_full}.
         to edje_object_text_markup_filter_callback_{add,del,del_full}.
+
+2012-02-24  Jihoon Kim
+
+	* add edje_object_part_text_imf_context_get for getting Ecore_IMF_Context handle in edje text object
